[tool.poetry]
name = "fastrf"
version = "0.1.1"
description = "Library to create, store, query, and update Radio Frequency Models, Specs, and Reports"
authors = ["Ian Cleary <iancleary@hey.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6.1"
pydantic = "^1.5.1"
fastapi = ">=0.58,<0.69"
uvicorn = ">=0.11.5,<0.17.0"
uuid = "^1.30"
fastapi_camelcase = "^1.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^20.8b1"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mkdocs = "^1.2"
mkdocs-material = "^8.1.3"
markdown-include = "^0.6.0"
taskipy = "^1.9.0"
asgi-lifespan = "1.*"
httpx = "^0.20.0"
pytest-asyncio = "^0.16.0"
pre-commit = "^2.16.0"

[tool.taskipy.tasks]
test = "bash scripts/test.sh"
lint = "bash scripts/lint.sh"
format = "bash scripts/format.sh"
mkdocs = "bash scripts/docs-live.sh"
pre-commit = "pre-commit install"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
